--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "npm run start:dev",
+    "build": "npm run build:dev",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "start:dev": "ng serve --c=dev",
+    "build:dev": "ng build --c=dev",
+    "start:prod": "ng serve --c=prod",
+    "build:prod": "ng build --c=prod"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +24,13 @@
     "@angular/router": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "@angular/cdk": "^16.1.0",
+    "@angular/localize": "^16.1.0",
+    "@angular/material": "^16.1.0",
+    "@angular/fire": "^16.0.0",
+    "firebase": "^10.4.0",
+    "ngx-image-cropper": "^6.3.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.5",
