--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,23 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ang-arch-course",
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "sourceMap": true,
+            "namedChunks": true,
+            "budgets": [
+              {
+                "type": "initial",
+                "maximumWarning": "500kb",
+                "maximumError": "1mb"
+              },
+              {
+                "type": "anyComponentStyle",
+                "maximumWarning": "2kb",
+                "maximumError": "4kb"
+              }
+            ],
+            "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -35,40 +51,41 @@
             "scripts": []
           },
           "configurations": {
-            "production": {
-              "budgets": [
+            "prod": {
+              "sourceMap": false,
+              "buildOptimizer": true,
+              "optimization": true,
+              "fileReplacements": [
                 {
-                  "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
                 }
-              ],
-              "outputHashing": "all"
+              ]
             },
-            "development": {
+            "dev": {
               "buildOptimizer": false,
               "optimization": false,
-              "vendorChunk": true,
-              "extractLicenses": false,
-              "sourceMap": true,
-              "namedChunks": true
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev.ts"
+                }
+              ]
             }
-          },
-          "defaultConfiguration": "production"
+          }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "ang-arch-course:build",
+            "port": 5200
+          },
           "configurations": {
-            "production": {
-              "browserTarget": "ang-arch-course:build:production"
+            "prod": {
+              "browserTarget": "ang-arch-course:build:prod"
             },
-            "development": {
-              "browserTarget": "ang-arch-course:build:development"
+            "dev": {
+              "browserTarget": "ang-arch-course:build:dev"
             }
           },
           "defaultConfiguration": "development"
