--- a/package.json
+++ b/package.json
@@ -15,22 +15,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
+    "@angular/cdk": "^16.1.0",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
+    "@angular/fire": "^5.3.0",
     "@angular/forms": "^16.1.0",
+    "@angular/localize": "^16.1.0",
+    "@angular/material": "^16.1.0",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@ngrx/effects": "^8.6.0",
+    "@ngrx/store": "^8.6.0",
+    "firebase": "^7.6.1",
+    "ngx-image-cropper": "^6.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0",
-    "@angular/cdk": "^16.1.0",
-    "@angular/localize": "^16.1.0",
-    "@angular/material": "^16.1.0",
-    "@angular/fire": "^16.0.0",
-    "firebase": "^10.4.0",
-    "ngx-image-cropper": "^6.3.4"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.5",
